feature: 사용자 Account 관련 Page 구현 (#19)
* feature: Launcher Page View 개발

* feature: Login Page View 개발

* feature: Sign Up Activity View 구현

* feature: Service Login Activity View 구현

--- a/front-end/Android/app/src/main/res/values/strings.xml
+++ b/front-end/Android/app/src/main/res/values/strings.xml
@@ -1,6 +1,29 @@
 <resources>
     <string name="app_name">Kindit</string>
     <string name="kakao_app_key">f3f24fa18ce3bf5244a9316dbd5bb5fe</string>
+
     <string name="open">open</string>
     <string name="close">close</string>
+
+    <!-- Launcher Activity Text -->
+    <string name="lc_tv_info">카인딧에 오신것을 환영합니다!\n여러분만의 레시피를 마음껏 공유해주세요!</string>
+
+
+    <!-- Login Activity Text -->
+    <string name="login_tv_info">카인딧에 오신것을 환영합니다!\n여러분만의 레시피를 마음껏 공유해주세요!</string>
+    <string name="login_tv_sign_up">회원가입</string>
+    <string name="login_btn_login">로그인</string>
+    <string name="login_btn_social">소셜로 로그인</string>
+
+
+    <!-- SignUp Activity Text -->
+    <string name="su_tv_sign_up">회원가입</string>
+    <string name="su_tv_email">이메일</string>
+    <string name="su_edt_email">Email</string>
+    <string name="su_tv_nickname">닉네임</string>
+    <string name="su_edt_nickname">닉네임</string>
+    <string name="su_btn_nickname_valid">중복 확인</string>
+    <string name="su_tv_pass1">비밀번호</string>
+    <string name="su_tv_pass2">비밀번호 확인</string>
+    <string name="su_btn_req_sign">가입 요청</string>
 </resources>
