--- a/front-end/Android/app/src/main/res/values/strings.xml
+++ b/front-end/Android/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="fit_btn_ok">완료</string>
     <string name="ct_tv_item">서브웨이</string>
     <string name="fs_edtl_serach">브랜드 혹은 메뉴명으로 검색보세요.</string>
+    <string name="fsi_tv_rb">별점</string>
 </resources>
