--- a/front-end/Android/app/src/main/res/values/strings.xml
+++ b/front-end/Android/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Kindit</string>
+    <string name="app_name">KINDIT-카인딧</string>
     <string name="kakao_app_key">f3f24fa18ce3bf5244a9316dbd5bb5fe</string>
 
     <string name="open">open</string>
