--- a/front-end/Android/app/src/main/res/values/strings.xml
+++ b/front-end/Android/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="ct_tv_item">서브웨이</string>
     <string name="fs_edtl_serach">브랜드 혹은 메뉴명으로 검색보세요.</string>
     <string name="fsi_tv_rb">별점</string>
+    <string name="fs_edt_search">브랜드 혹은 메뉴명으로 검색해보세요.</string>
 </resources>
