feature: 커스텀 메뉴 상세정보 구현 완료 - 이미지, 메뉴이름, 팁 - 선택옵션, 해시태그 어뎁터 구현 완료 - 리뷰 평가 미 구현..ㅜ

--- a/front-end/Android/app/src/main/res/values/strings.xml
+++ b/front-end/Android/app/src/main/res/values/strings.xml
@@ -33,4 +33,9 @@
     <string name="fs_edtl_serach">브랜드 혹은 메뉴명으로 검색보세요.</string>
     <string name="fsi_tv_rb">별점</string>
     <string name="fs_edt_search">브랜드 혹은 메뉴명으로 검색해보세요.</string>
+    <string name="cd_tv_cost">가격</string>
+    <string name="cd_tv_tip">업로드자 한마디</string>
+    <string name="cd_tv_option">선택옵션</string>
+    <string name="cd_tv_tag">해시태그</string>
+    <string name="cd_tv_rating">레시피를 평가해주세요 :)</string>
 </resources>
