--- a/front-end/Android/app/src/main/res/values/strings.xml
+++ b/front-end/Android/app/src/main/res/values/strings.xml
@@ -41,4 +41,6 @@
     <string name="cw_tv_save">완료</string>
     <string name="cw_btn_load">이미지 업로드하기 +</string>
     <string name="cw_edt_text">글을 작성해주세요 :)</string>
+    <string name="permission_1">[설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>
+    <string name="permission_2">사진 및 파일을 저장하기 위하여 접근 권한이 필요합니다.</string>
 </resources>
